infra/6-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-watcher-ingress
  namespace: market-watcher
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - market-watcher.redby.fr
      secretName: market-watcher-redby-fr-tls
  rules:
    - host: market-watcher.redby.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-quotes-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-frontend
                port:
                  number: 80
